# vcf2csv

./: Cargo.toml  README.md  pyproject.toml  sample.csv  sample.vcf  sample2.vcf
src/: lib.rs
